--- a/style.css
+++ b/style.css
@@ -1,181 +1,16 @@
-// VARIABLES
-// --> colors
-// --> grids
-// --> typography
-// 
-// BASE
-// --> page
-// --> typography
-// 
-// COMPONENTS
-// --> header
-// --> form
-// --> list
-// --> footer
-// 
-// --> main
-
-@import "breakpoint";
-
-
-// VARIABLES
-
-// colors
-$borderColor: #111;
-$fontColor: #222;
-$buttonColor: #ddd;
-$activeButtonColor: #f7f7f7;
-$inputColor: #f7f7f7;
-
-// grids
-$mobileBP: 27.5rem;
-$maxWidth: 40rem;
-
-// typography
-$fontFamily: Helvetica, Arial, sans-serif;
-
-$rootFontSize: 16px;
-$titleFontSize: 2.5rem;
-$todoFontSize: 1.5rem;
-$auxFontSize: 1rem;
-
-
-// BASE
-
-// page
-* {
-  box-sizing: border-box;
-}
-
 body {
-  margin: 0;
+    background-image: url(img/trianglify.png);
+    background-size: cover; 
 }
-
-// typography
-html {
-  font-size: $rootFontSize;
+.container{
+    padding-top: 20vh; 
 }
-
-body {
-  font-family: $fontFamily;
-  color: $fontColor;
+.card{
+    background-color: rgba(255, 250, 250, 0.7);
 }
-
-a {
-  text-decoration: none;
-  color: $fontColor;
-}
-
-
-// COMPONENTS
-
-// header
-.title {
-  font-size: $titleFontSize;
-}
-
-.desc {
-  font-size: $auxFontSize;
-}
-
-// form
-.add-todo-form {
-  width: 80%;
-  margin: 0 auto;
-  display: flex;
-}
-
-.add-todo-input, .add-todo-button {
-  font-size: $todoFontSize;
-  margin: 0.125rem;
-  border: 1px solid $borderColor;
-}
-
-.add-todo-input {
-  flex: 1 1 auto;
-  width: 100%;
-  padding: 0.125rem 0.375rem;
-  background: $inputColor;
-}
-
-.add-todo-button {
-  flex: 0 0 auto;
-  padding: 0.125rem 0.5rem;
-  background: $buttonColor;
-}
-
-// list
-.todo-list {
-  list-style: none;
-  font-size: $todoFontSize;
-  text-align: left;
-  width: 70%;
-  margin: 1.5rem auto;
-  padding: 0;
-}
-
-.todo {
-  margin: 0.5rem 0;
-  display: flex;
-  align-content: center;
-}
-
-.todo-text {
-  flex: 1 1 auto;
-  margin: 0;
-  word-wrap: break-word;
-  cursor: pointer;
-}
-
-.todo-done {
-  text-decoration: line-through;
-}
-
-.todo-delete {
-  flex: 0 0 auto;
-  display: block;
-  margin: auto 0;
-  padding: 0 0.25rem;
-}
-
-// footer
-.footer {
-  font-size: $auxFontSize;
-  display: flex;
-  flex-wrap: wrap;
-  width: 80%;
-  margin: 0 auto;
-}
-
-.footer-link {
-  flex: 1 1 100%;
-  width: 100%;
-  border: 1px solid $borderColor;
-  margin: 0.5rem;
-  padding: 0.5rem 0.25rem;
-  cursor: pointer;
-  background: $buttonColor;
-}
-
-.active {
-  background: $activeButtonColor;
-}
-
-@include breakpoint($mobileBP) {
-  .footer {
-    flex-wrap: nowrap;
-  }
-
-  .footer-link {
-    flex: 1 1 0;
-  }
-}
-
-// main
-.todo-app {
-  text-align: center;
-  width: 100%;
-  max-width: $maxWidth;
-  margin: 0 auto;
-  padding: 1rem;
+.card-title{
+    text-align: center;
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 10em;
+    color: #FFBFC5;
 }
